# Application-Musicale

./: .buildinfo  .coverage  README.md  index.html  main.py  pyproject.toml  requirements.txt  search.html
.github/workflows/: sphinx_doc.yaml  tests.yaml
docs/source/: conf.py  index.rst
src/application_musicale/: data_loader.py  interface.py  viz.py
